Handling Get And Post request in json and xml format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/swann
+spring.datasource.username=root
+spring.datasource.password=swann
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+
+spring.thymeleaf.cache=false
+spring.freemarker.cache=false
+spring.groovy.template.cache=false
+spring.mustache.cache=false
+server.servlet.session.persistent=true
+spring.h2.console.enabled=true
 
